<resources>

    <string name="app_name">LDAPLogin</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="reset_password">Reset password</string>
    <string name="sample">Sample</string>
    <string name="logging_in">Accesso in corso</string>
    <string name="refreshlist">Aggiornamento</string>
    <string name="acra_toast_text">L\'applicazione si è chiusa improvvisamente un report è stato inviato.</string>
    <string name="update_json">https://raw.githubusercontent.com/veskoz/LDAPLogin/master/app/update.json</string>
    <string name="status_ok">OK!</string>
    <string name="status_unsent">richiesta non ancora inviata</string>


    <!-- Menu -->
    <string name="settings">Impostazioni</string>
    <string name="update">Aggiorna</string>

    <!-- Default values for preferences -->
    <string name="ldap_address_value">www.zflexldap.com</string>
    <string name="ldap_port_value">389</string>
    <string name="ldap_base_dn_value">dc=zflexsoftware,dc=com</string>
    <string name="ldap_bind_dn_value">cn=ro_admin,ou=sysadmins,dc=zflexsoftware,dc=com</string>
    <string name="ldap_bind_password_value">zflexpass</string>
    <string name="url_save_name_value">http://10.170.24.61/LDAPLogin_Server/saveName.php</string>

    <!-- Preference Titles -->
    <string name="ldap">LDAP</string>

    <!-- Messages Preferences -->
    <string name="ldap_address">Indirizzo</string>
    <string name="ldap_port">Porta</string>
    <string name="ldap_base_dn">Base DN</string>
    <string name="ldap_bind_dn">Bind DN</string>
    <string name="ldap_bind_password">Password</string>
    <string name="url_save_name">Pagina di destinazione</string>

</resources>