<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentLeft="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:background="@drawable/layout_background"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="345dp"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:id="@+id/username"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:hint="@string/username"
                    android:padding="20dp"
                    android:textSize="14sp"
                    android:textColorHint="#606060"
                    android:inputType="text"
                    android:autofillHints="@string/username"
                    tools:ignore="TextFields"
                    android:drawableStart="@drawable/ic_mail_outline_black_24dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/password"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:autofillHints="@string/password" />
                <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="25dp"
                    android:id="@+id/signin"
                    android:src="@drawable/ic_arrow_forward_black_24dp"
                    android:background="@drawable/button_background"
                    android:layout_marginRight="25dp"
                    android:contentDescription="@string/login" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="200dp"
                    android:text="@string/password_dimenticata"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_background"
                    android:text="@string/reset_password"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>